Finished making the update code.
